--- a/source/stylesheets/blog.css
+++ b/source/stylesheets/blog.css
@@ -88,6 +88,9 @@ code, kbd, pre, samp {
 .post {
     padding-bottom: 2em;
 }
+.post-header {
+  margin-bottom: 1em;
+}
 .post-title {
     font-size: 2em;
     color: #222;
